fix layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main-reveal {
+    opacity: 0;
+}
+
+.header-gutter-rendered .main-reveal {
+    opacity: 1;
+    transition: 1s;
+}
